SERVER-66841 Fix LOGV2 invalid JSON when truncation happens at a backslash character